style update and information and guides

--- a/gyms.html
+++ b/gyms.html
@@ -71,8 +71,9 @@
                                 <li class="nav-item"> <a class="nav-link active" href="#home">HOME <span class="sr-only">(current)</span></a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#features">FEATURES</a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#gallery">GALLERY</a> </li>
+                                <li class="nav-item"> <a class="nav-link" href="#guides">GUIDES</a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#contact">CONTACT</a> </li>
-                                <li class="nav-item mb-2"><a href="./index.html" class="btn btn-outline-light ml-lg-3">FOR CLIMBERS</a></li>
+                                <li class="nav-item mb-2"><a href="/" class="btn btn-outline-light ml-lg-3">FOR CLIMBERS</a></li>
                                 <li class="nav-item"><a href="https://main.betabouldersapp.com" class="btn btn-outline-light ml-lg-3 text-white" target="_blank">APP</a></li>
                             </ul>
                         </div>
@@ -88,14 +89,14 @@
 
     <div class="section-title p-3 mt-3">
         <div class="container">
-            <h2 class="animated fadeIn wow mb-0" data-wow-duration="1.0s" data-wow-delay="1.0s">Connecting gyms with their climbers</h2>
+            <h2 class="animated fadeIn wow mb-0" data-wow-duration="1.0s" data-wow-delay="1.0s">Connecting gyms with climbers</h2>
             <p class="tagline animated fadeIn wow" data-wow-duration="1.0s" data-wow-delay="1.2s">with easy to scan tags delivering beta videos and <br/>analyzable performance metrics.</p>
         </div>
      </div>
 
-    <div class="section light-bg pt-5" id="features">
+    <div class="section pt-5" id="features">
         <div class="container">
-            <div class="section-title">
+            <div class="section-title mb-5">
                 <small>FEATURES</small>
                 <h3>Adding Value to your Membership</h3>
                 <h4>Gaining new members while retaining old.</h4>
@@ -106,7 +107,7 @@
                     <a class="nav-link active" data-toggle="tab" href="#communication">βTag™</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" href="#schedule">QR Scanner & Ticks</a>
+                    <a class="nav-link" data-toggle="tab" href="#schedule">Scan, Tick & Reset</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" data-toggle="tab" href="#messages">Route Database</a>
@@ -123,9 +124,9 @@
                             <div class="box-icon"><span class="ti-tag gradient-fill ti-3x"></span></div>
                             <h3>Our <span style="font-weight: 800">βTags™</span></h3>
                             <p class="lead">Organization is the problem and our tags are the solution. </p>
-                            <p>Print βTags™ directly from a climb's page or order dynamic, reusable βTags™ that you can attach to routes over and over to skip the process of reprinting. Along with key route information, βTags™ are marked with handy indicators for color, danger, and what's considered on the route.
+                            <p>Print βTags™ directly from a climb's page or order dynamic, reusable βTags™ that you can attach to routes over and over to skip the process of reprinting. Along with key route information, βTags™ are marked with handy indicators for color and two hand starts.
                             </p>
-                            <p> Climbers can scan βTags™ to get beta, save and track progress, or to rate climbs.Gyms can also opt in for compact βTag™ that can be printed and added to existing tags. This option is especially suited for competitions that require multiple tags at a moment's notice.
+                            <p> Climbers can scan βTags™ to get beta, save and track progress, or to rate climbs. Gyms can also opt in for compact βTag™ that can be printed and added to existing tags. This option is especially suited for competitions that require multiple tags at a moment's notice.
                             </p>
                         </div>
                     </div>
@@ -133,9 +134,9 @@
                 <div class="tab-pane fade" id="schedule">
                     <div class="d-flex flex-column flex-md-row">
                         <div>
-                            <h3>Scanning FTW</h3>
+                            <h3>Scan, Tick & Reset</h3>
                             <p class="lead">Our system revolves around the idea of scanning to quickly deliver the goods. </p>
-                            <p> With any QR Scanner, climbers can scan routes they completed to save it to their accounts or to navigate directly to the climb's page where they can checkout the solution and beta.
+                            <p> With any QR Scanner, climbers can scan routes they completed to save it to their accounts or to navigate directly to the climb's page where they can checkout the solution and beta along with other route information. Gyms and setters can also use the built in scanner to reassign a reusable tag to a different route in a process of resetting a reusable tag!
                             </p>
                             <img src="./images/dashboardicon.png" style="width: 180px">
                         </div>
@@ -167,9 +168,7 @@
                             <h6>Route Management</h6>
                             <p> Additionally, get the demographics of both your climbers and climbs. Organize your routes to meet a distribution of grades and climbing styles. See what climbs, grades, and areas of the gym are the most popular and adjust the time when to switch out certain climbs based on their current use and popularity.</p>
                             <p>The browsable database of climbs also be used by your climbers so they can see what's new and what to do before heading to the gym.</p>
-                            <p>All this so you can make better business decisions in the interest of your climbers.
-                            </p>
-                            <h6>Competitions</h6>
+                            <h6 class="mt-5">Competitions</h6>
                             <p> Do you do climbing competitions? If you do, you can ditch the scorecards and forget about gathering up volunteers to tally up points. Climbers can use the tick feature of our app to tally points in realtime for maximum competitiveness. They can see who's ahead before the competition is over and push themselves harder. Simply just create a new climb under competition mode!
                             </p>
                             <img src="./images/comp.png" style="width: 180px">
@@ -187,7 +186,7 @@
 
     <div class="section">
 
-        <div class="container">
+        <div class="container mb-5">
             <div class="row">
                 <div class="col-md-6">
                     <img src="images/comingout.png" alt="coming out photo" class="img-fluid animated wow fadeIn" data-wow-duration="2.0s" data-wow-delay="0.4s">
@@ -196,9 +195,8 @@
                     <div>
                         <div class="box-icon"><span class="ti-paint-bucket gradient-fill ti-3x"></span></div>
                         <h2>Focused on Climbing</h2>
-                        <p class="mb-4">As climbers ourselves, we built an app that prioritizes giving our community the means to complete a route and save it. Because βouldersapp™ is centered on the climb and not about offering frivolous badges and awards, it is insanely easy and intituitive to use.</p>
-                        <p>To demo, gyms can start off with just beta videos through βSpray™. Contact us for a free sample kit with reusuable tags.</p>
-                        <a href="https://spray.betabouldersapp.com/"><img src="./images/spray.png" class="img-fluid" style="height:180px"></a></div>
+                        <p class="mb-4">As climbers ourselves, we built an app that prioritizes giving climbers of all levels the means to complete a route and save it. Because βouldersapp™ is centered on the climb and not about offering frivolous badges and awards, it is insanely easy and intituitive to use.</p>
+                        <p>To demo, gyms may contact us for a free sample kit with reusuable tags.</p>
                 </div>
             </div>
 
@@ -209,41 +207,42 @@
 
 
     <div class="section light-bg">
-        
+        <div class="container">
         <div class="container">
             <div class="box-icon"><span class="ti-time gradient-fill ti-3x"></span></div>
-            <h3>Adding a Climb is Easy, Simple, and Quick.</h3>
+            <h3>Adding Climbs is Easy, Simple, and Quick.</h3>
             <div class="row">
-                <div class="col-md-8 d-flex align-items-center animated wow fadeInLeft" data-wow-duration="1.7s" data-wow-delay="0.3s">
+                <div class="col-md-7 d-flex align-items-center animated wow fadeInLeft" data-wow-duration="1.7s" data-wow-delay="0.3s">
                     <ul class="list-unstyled ui-steps">
                         <li class="media">
                             <div class="circle-icon mr-4">1</div>
                             <div class="media-body">
-                                <h5>Log into your Gym Account</h5>
-                                <p>Navigate to your gym's profile page or manage tags tab.</p>
+                                <h5>Log into your Gym or Setter Account</h5>
+                                <p>And navigate to your gym's page.</p>
                             </div>
                         </li>
                         <li class="media my-4">
                             <div class="circle-icon mr-4">2</div>
                             <div class="media-body">
                                 <h5>Add a Climb in under 15 seconds</h5>
-                                <p>Enter a new climb within seconds with a 3 step form that gathers an image and selects some basic info. Start by clicking the green plus icon. Print the formatted βTag™ or skip the printing process all together reassigning the new climb to a reusable βTag™.</p>
+                                <p>With a 3 step form that gathers an image and selects some basic info.</p>
                             </div>
                         </li>
                         <li class="media">
                             <div class="circle-icon mr-4">3</div>
                             <div class="media-body">
-                                <h5>Add Beta Videos or Annotations</h5>
-                                <p>Record and share beta to help your climbers who are stuck or opt to annotate a climb as well. Give hints for your climb's cruxes using the annotation tool to give hints at key areas.</p>
+                                <h5>Add Beta Videos and/or Annotations</h5>
+                                <p>To help your climbers who are stuck using the video uploader and/or annotation tools.</p>
                             </div>
                         </li>
                     </ul>
                 </div>
-                <div class="col-md-4 text-center">
+                <div class="col-md-4 offset-md-1 text-center">
                     <img src="images/iphonex2.png" alt="iphone" class="img-fluid animated wow fadeIn" data-wow-duration="2.0s" data-wow-delay="0.4s">
                 </div>
 
             </div>
+        </div>
 
         </div>
 
@@ -285,7 +284,7 @@
                 <small>GALLERY</small>
                 <h3>App Screenshots</h3>
             </div>
-
+            <div class="container pl-5 pr-5">
             <div class="img-gallery owl-carousel owl-theme">
                 <img src="images/gallery/1.jpg" alt="image">
                 <img src="images/gallery/2.jpg" alt="image">
@@ -302,14 +301,50 @@
                 <img src="images/gallery/13.jpg" alt="image">
                 <img src="images/gallery/14.jpg" alt="image">
             </div>
+        </div>
 
         </div>
 
     </div>
     <!-- // end .section -->
 
-    <div class="section pt-0">
+<div class="section" id="guides">
+    <div class="container">
+        <div class="section-title">
+            <small>PDFs</small>
+            <h3>App Guides and How-to's</h3>
+        </div>
+        <div class="container mt-5 mb-5 pl-5 pr-5 text-center">
+            <div class="row text-center">
+                <div class="col-6 col-md-3">
+                    <a href="./guides/pdfs/gym.pdf" target="_blank"><img class="img-fluid border mb-2" src="./guides/previews/gym.png"></a>
+                    <p/>Gym Account Setup
+                </div>
+                <div class="col-6 col-md-3">
+                    <a href="./guides/pdfs/setter.pdf" target="_blank"><img class="img-fluid border mb-2" src="./guides/previews/setter.png"></a>
+                    <p/>Setter Account Setup
+                </div>
+                <div class="col-6 col-md-3">
+                    <a href="./guides/pdfs/addclimb.pdf" target="_blank"><img class="img-fluid border mb-2" src="./guides/previews/addclimb.png"></a>
+                    <p/>How to: Adding Climbs
+                </div>
+                <div class="col-6 col-md-3">
+                    <a href="./guides/pdfs/scan.pdf" target="_blank"><img class="img-fluid border mb-2" src="./guides/previews/scan.png"></a>
+                    <p/>How to: Scans and Ticks
+                </div>
+                <div class="col-6 col-md-3">
+                    <a href="./guides/pdfs/reset.pdf" target="_blank"><img class="img-fluid border mb-2" src="./guides/previews/reset.png"></a>
+                    <p/>How to: Reset βTag™
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+    <!-- // end .section -->
+
+    <div class="section pt-0 mt-3">
         <div class="container">
+            <div class="container">
             <div class="section-title">
                 <small>FAQ</small>
                 <h3>Frequently Asked Questions</h3>
@@ -318,37 +353,38 @@
             <div class="row pt-4">
                 <div class="col-md-6">
                     <h4 class="mb-3">As a gym, what do I have to do to integrate this into our system?</h4>
-                    <p class="light-font mb-5">Our app is a standalone web application. All that has to be done is to include your gym into our list of participating gyms. Once you have a gym account, you're good to go! </p>
+                    <p class="light-font mb-5">Our app is a standalone web application. All that a gym has to do is be included in our participating gyms. Once you have a gym account, you're good to go! </p>
                 </div>
                 <div class="col-md-6">
-                    <h4 class="mb-3">Are there options for customization or have our own gym app?</h4>
-                    <p class="light-font mb-5">We can spin a server up for your own gym to have it highly customizable. However, that option exists outside our offered priced plans, so please contact us to see what can be done. </p>
+                    <h4 class="mb-3">Does this app require more work for our setters?</h4>
+                    <p class="light-font mb-5">Adding more value and features to your gym that your members would appreciate does require more from your gym staff. With this in mind, our app is designed to make the process as easy and quick as possible with reusable tags and a quick add climb process.</p>
                 </div>
             </div>
+        </div>
         </div>
 
     </div>
     <!-- // end .section -->
 
-
-
     <div class="section bg-gradient">
+        <div class="container">
         <div class="container">
             <div class="call-to-action">
 
                 <div class="text-center mb-3"><img src="./images/desktop.png" class="img-fluid" style="max-height: 256px"></div>
-                <h2>Accessible Anywhere (including your desktop)</h2>
-                <p class="tagline">Available for all major mobile and desktop platforms. This app can also added to your homepage for even quicker accessibility (progressive web app). Coming soon to download on Google Play and Apple App Stores.</p>
                 <div class="my-4">
                     <button class="btn btn-light bg-white"><img src="./images/apple.png" alt="icon" class="img-fluid" style="max-height: 100px"></button>
                     <button class="btn btn-light bg-white"><img src="./images/play.png" alt="icon" class="img-fluid" style="max-height: 100px"></button>
-                     <button class="btn btn-light bg-white"><img src="./public/img/ReadMe/pwa.png" alt="icon" class="img-fluid" style="max-height: 100px;" ></button>
-
+                    <button class="btn btn-light bg-white"><img src="./public/img/ReadMe/pwa.png" alt="icon" class="img-fluid" style="max-height: 100px;"></button>
                 </div>
+                <h2>Accessible Anywhere</h2>
+                <p class="tagline">Available for all* major mobile and desktop platforms.</p>
                 <p class="text-primary"><small><i>*Tested and working on all browsers including, Safari, Chrome, Firefox, and Edge. </i></small></p>
+
+                
             </div>
         </div>
-
+</div>
     </div>
     <!-- // end .section -->
 
@@ -356,7 +392,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 text-center text-lg-left">
-                	<div class="text-center mb-3"><img src="./images/beta.png" class="img-fluid" style="max-height: 256px"></div>
+                    <div class="text-center mb-3"><img src="./images/beta.png" class="img-fluid" style="max-height: 200px"></div>
+                    <div class="container">
                     <p class="mb-2"> <span class="ti-location-pin mr-2"></span> Los Angeles, CA</p>
                     <div class=" d-block d-sm-inline-block">
                         <p class="mb-2">
@@ -368,6 +405,7 @@
                             <span class="ti-headphone-alt mr-2"></span> <a href="tel:6264238985">(626) 423-8985</a>
                         </p>
                     </div>
+                </div>
 
                 </div>
                 <div class="col-lg-8">
@@ -392,7 +430,7 @@
                   <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
                   <div class="validation"></div>
                 </div>
-                <div class=""><button type="submit" title="Send Message" class="btn text-white" style="background-image:linear-gradient(122deg, #02ABA0 0%, white 100%)">Send Message</button></div>
+                <div><button type="submit" title="Send Message" class="btn btn-secondary text-white">Send Message</button></div>
               </form>
             </div>
           <!-- </div> -->
@@ -409,18 +447,17 @@
     </div>
     <!-- // end .section -->
     <footer class="my-5 text-center">
-    	<div class="container">
-    	<div class="d-flex flex-nowrap" id="footer-img">
+        <div class="container">
+        <div class="d-flex flex-nowrap" id="footer-img">
         </div>
     </div>
-        <!-- Copyright removal is not prohibited! -->
-        <p class="mb-2"><small>COPYRIGHT © 2018. ALL RIGHTS RESERVED.<br/>BETABOULDERSAPP.COM</small></p>
+        <p class="mb-2"><small>COPYRIGHT © 2019. ALL RIGHTS RESERVED.<br/>BETABOULDERSAPP.COM</small></p>
 
-        <small>
+<!--         <small>
             <a href="#" class="m-2">PRESS</a>
             <a href="#" class="m-2">TERMS</a>
             <a href="#" class="m-2">PRIVACY</a>
-        </small>
+        </small> -->
     </footer>
 
     <!-- jQuery and Bootstrap -->
