--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                                 <li class="nav-item"> <a class="nav-link" href="#features">FEATURES</a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#gallery">GALLERY</a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#contact">CONTACT</a> </li>
-                                <li class="nav-item mb-2"><a href="./gyms.html" class="btn btn-outline-light ml-lg-3">FOR GYMS</a></li>
-                                <li class="nav-item"><a href="https://main.betabouldersapp.com" class="btn btn-outline-light ml-lg-3 text-white" target="_blank">APP</a></li>
+                                <li class="nav-item mb-2"><a href="./gyms" class="btn btn-outline-light ml-lg-3">FOR GYMS</a></li>
+                                <li class="nav-item"><a href="https://main.betabouldersapp.com" class="btn btn-outline-light ml-lg-3" target="_blank">APP</a></li>
                             </ul>
                         </div>
                     </nav>
@@ -55,27 +55,26 @@
     </div>
 
 <header class="bg-top" id="home" style="background:url(./images/top.png) no-repeat center center fixed; background-size: cover; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover;">
-        <div class="img-holder"><img src="images/iphonex.png" alt="phone" class="img-fluid animated fadeInUp wow" data-wow-duration="1s" data-wow-delay="0.1s"></div>
+        <div class="img-holder"><img src="images/iphonex.png" alt="phone" class="img-fluid animated fadeInUp wow phone-images" data-wow-duration="1s" data-wow-delay="0.1s"></div>
     </header>
 
     <div class="section-title p-3 mt-3">
         <div class="container">
             <h2 class="animated fadeIn wow mb-0" data-wow-duration="1.0s" data-wow-delay="1.0s">Share Beta. Track Progress. Build Community.</h2>
-            <p class="tagline animated fadeIn wow" data-wow-duration="1.0s" data-wow-delay="1.2s">The app rock climbers wished for. Get the solution (beta) to your bouldering routes and more!</p>
+            <p class="tagline animated fadeIn wow mt-1" data-wow-duration="1.0s" data-wow-delay="1.2s">The app rock climbers wished for. Get the solution (beta) to bouldering routes and more!</p>
         </div>
      </div>
 
-    <div class="client-logos bg-white mb-3">
+<!--     <div class="client-logos bg-white mb-3">
         <div class="container text-center">
             <img src="images/client-logos.png" alt="client logos" class="img-fluid">
         </div>
-    </div>
+    </div> -->
 
-    <div class="section light-bg" id="features">
+    <div class="section" id="features">
         <div class="container">
-
             <div class="row">
-                <div class="col-12 col-lg-4 animated wow flipInX" data-wow-duration="1.5s" data-wow-delay="0.3s">
+                <div class="col-12 col-lg-4 animated wow flipInX" data-wow-duration="1.0s" data-wow-delay="0.3s">
                     <div class="card features">
                         <div class="card-body">
                             <div class="media">
@@ -88,7 +87,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-4 animated wow flipInX" data-wow-duration="1.5s" data-wow-delay="0.5s">
+                <div class="col-12 col-lg-4 animated wow flipInX" data-wow-duration="1.0s" data-wow-delay="0.5s">
                     <div class="card features">
                         <div class="card-body">
                             <div class="media">
@@ -101,7 +100,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-4 animated wow flipInX" data-wow-duration="1.5s" data-wow-delay="0.7s">
+                <div class="col-12 col-lg-4 animated wow flipInX" data-wow-duration="1.0s" data-wow-delay="0.7s">
                     <div class="card features">
                         <div class="card-body">
                             <div class="media">
@@ -123,32 +122,33 @@
     </div>
     <!-- // end .section -->
     <div class="section">
-
+<div class="container">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 offset-lg-6 animated wow fadeInRight" data-wow-duration="1.7s" data-wow-delay="0.3s">
+                <div class="col-lg-6 offset-lg-6">
                     <div class="box-icon"><span class="ti-mobile gradient-fill ti-3x"></span></div>
                     <h2>The first of its kind.</h2>
                     <p class="mb-4">There's no other application tailored made for climbers and developed and marketed by climbers that allows users to quickly track progress and get beta for free. Use βouldersapp™ to check into your climbing gym and start tracking your climbs and seeing beta when you need it!</p>
-                    <a href="https://main.betabouldersapp.com/climbs" class="btn btn-primary">Check it Out!</a>
+                    <a href="https://main.betabouldersapp.com/climbs" class="btn btn-secondary">Check it Out!</a>
                 </div>
             </div>
             <div class="perspective-phone">
-                <img src="images/perspective.png" alt="perspective phone" class="img-fluid animated wow fadeIn" data-wow-duration="2.0s" data-wow-delay="0.4s">
+                <img src="images/perspective.png" alt="perspective phone" class="img-fluid">
             </div>
         </div>
+    </div>
 
     </div>
     <!-- // end .section -->
 
-    <div class="section">
-
+    <div class="section light-bg">
+<div class="container">
         <div class="container" >
             <div class="row">
-                <div class="col-md-6">
-                    <img src="images/dualphone1.png" alt="dual phone" class="img-fluid animated wow fadeIn" data-wow-duration="2.0s" data-wow-delay="0.4s">
+                <div class="col-md-5 text-center">
+                    <img src="images/dualphone1.png" alt="dual phone" class="img-fluid" id="dual-phone-img">
                 </div>
-                <div class="col-md-6 d-flex align-items-center animated wow fadeInRight" data-wow-duration="1.7s" data-wow-delay="0.3s">
+                <div class="col-md-7 d-flex align-items-center">
                     <div>
                         <div class="box-icon"><span class="ti-rocket gradient-fill ti-3x"></span></div>
                         <h2>Scan the <span style="font-weight: 700">βTag™</span> and get Beta Videos Directly in Your Hands</h2>
@@ -158,7 +158,7 @@
             </div>
 
         </div>
-
+</div>
     </div>
     <!-- // end .section -->
 
@@ -202,7 +202,7 @@
                 <small>GALLERY</small>
                 <h3>App Screenshots</h3>
             </div>
-
+            <div class="container pl-5 pr-5">
             <div class="img-gallery owl-carousel owl-theme">
                 <img src="images/gallery/1.jpg" alt="image">
                 <img src="images/gallery/2.jpg" alt="image">
@@ -219,19 +219,20 @@
                 <img src="images/gallery/13.jpg" alt="image">
                 <img src="images/gallery/14.jpg" alt="image">
             </div>
+        </div>
 
         </div>
 
     </div>
     <!-- // end .section -->
 
-    <div class="section pt-0">
+    <div class="section pt-0 mt-3">
         <div class="container">
             <div class="section-title">
                 <small>FAQ</small>
                 <h3>Frequently Asked Questions</h3>
             </div>
-
+            <div class="container">
             <div class="row pt-4">
                 <div class="col-md-6">
                     <h4 class="mb-3">Do I have to have an account to use this app?</h4>
@@ -248,6 +249,7 @@
                 </div>
             </div>
         </div>
+        </div>
 
     </div>
     <!-- // end .section -->
@@ -256,21 +258,23 @@
 
     <div class="section bg-gradient">
         <div class="container">
+        <div class="container">
             <div class="call-to-action">
 
                 <div class="text-center mb-3"><img src="./images/desktop.png" class="img-fluid" style="max-height: 256px"></div>
-                <h2>Accessible Anywhere (including your desktop)</h2>
-                <p class="tagline">Available for all major mobile and desktop platforms. This app can also added to your homepage for even quicker accessibility (progressive web app). Coming soon to download on Google Play and Apple App Stores.</p>
                 <div class="my-4">
                     <button class="btn btn-light bg-white"><img src="./images/apple.png" alt="icon" class="img-fluid" style="max-height: 100px"></button>
                     <button class="btn btn-light bg-white"><img src="./images/play.png" alt="icon" class="img-fluid" style="max-height: 100px"></button>
-                     <button class="btn btn-light bg-white"><img src="./public/img/ReadMe/pwa.png" alt="icon" class="img-fluid" style="max-height: 100px;" ></button>
-
+                    <button class="btn btn-light bg-white"><img src="./public/img/ReadMe/pwa.png" alt="icon" class="img-fluid" style="max-height: 100px;"></button>
                 </div>
+                <h2>Accessible Anywhere</h2>
+                <p class="tagline">Available for all* major mobile and desktop platforms.</p>
                 <p class="text-primary"><small><i>*Tested and working on all browsers including, Safari, Chrome, Firefox, and Edge. </i></small></p>
+
+                
             </div>
         </div>
-
+</div>
     </div>
     <!-- // end .section -->
 
@@ -278,7 +282,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 text-center text-lg-left">
-                	<div class="text-center mb-3"><img src="./images/beta.png" class="img-fluid" style="max-height: 256px"></div>
+                	<div class="text-center mb-3"><img src="./images/beta.png" class="img-fluid" style="max-height: 200px"></div>
+                    <div class="container">
                     <p class="mb-2"> <span class="ti-location-pin mr-2"></span> Los Angeles, CA</p>
                     <div class=" d-block d-sm-inline-block">
                         <p class="mb-2">
@@ -290,6 +295,7 @@
                             <span class="ti-headphone-alt mr-2"></span> <a href="tel:6264238985">(626) 423-8985</a>
                         </p>
                     </div>
+                </div>
 
                 </div>
                 <div class="col-lg-8">
@@ -314,7 +320,7 @@
                   <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
                   <div class="validation"></div>
                 </div>
-                <div class=""><button type="submit" title="Send Message" class="btn text-white" style="background-image:linear-gradient(122deg, #02ABA0 0%, white 100%)">Send Message</button></div>
+                <div><button type="submit" title="Send Message" class="btn btn-secondary text-white">Send Message</button></div>
               </form>
             </div>
           <!-- </div> -->
@@ -335,14 +341,13 @@
     	<div class="d-flex flex-nowrap" id="footer-img">
         </div>
     </div>
-        <!-- Copyright removal is not prohibited! -->
-        <p class="mb-2"><small>COPYRIGHT © 2018. ALL RIGHTS RESERVED.<br/>BETABOULDERSAPP.COM</small></p>
+        <p class="mb-2"><small>COPYRIGHT © 2019. ALL RIGHTS RESERVED.<br/>BETABOULDERSAPP.COM</small></p>
 
-        <small>
+<!--         <small>
             <a href="#" class="m-2">PRESS</a>
             <a href="#" class="m-2">TERMS</a>
             <a href="#" class="m-2">PRIVACY</a>
-        </small>
+        </small> -->
     </footer>
 
     <!-- jQuery and Bootstrap -->
