--- a/gyms.html
+++ b/gyms.html
@@ -290,15 +290,15 @@
                 <img src="images/gallery/2.jpg" alt="image">
                 <img src="images/gallery/3.jpg" alt="image">
                 <img src="images/gallery/4.jpg" alt="image">
-                <img src="images/gallery/5.jpg" alt="image">
-                <img src="images/gallery/6.jpg" alt="image">
+                <!-- <img src="images/gallery/5.jpg" alt="image"> -->
+                <!-- <img src="images/gallery/6.jpg" alt="image"> -->
                 <img src="images/gallery/7.jpg" alt="image">
                 <img src="images/gallery/8.jpg" alt="image">
-                <img src="images/gallery/9.jpg" alt="image">
+                <!-- <img src="images/gallery/9.jpg" alt="image"> -->
                 <img src="images/gallery/10.jpg" alt="image">
                 <img src="images/gallery/11.jpg" alt="image">
                 <img src="images/gallery/12.jpg" alt="image">
-                <img src="images/gallery/13.jpg" alt="image">
+                <!-- <img src="images/gallery/13.jpg" alt="image"> -->
                 <img src="images/gallery/14.jpg" alt="image">
             </div>
         </div>
