--- a/gyms.html
+++ b/gyms.html
@@ -397,7 +397,7 @@
                     <p class="mb-2"> <span class="ti-location-pin mr-2"></span> Los Angeles, CA</p>
                     <div class=" d-block d-sm-inline-block">
                         <p class="mb-2">
-                            <span class="ti-email mr-2"></span> <a class="mr-4" href="info@betabouldersapp.com">info@betabouldersapp.com</a>
+                            <span class="ti-email mr-2"></span> <a class="mr-4" href="mailto:info@betabouldersapp.com">info@betabouldersapp.com</a>
                         </p>
                     </div>
                     <div class="d-block d-sm-inline-block mb-3">
