google tag and some rewording

--- a/gyms.html
+++ b/gyms.html
@@ -357,7 +357,7 @@
                 </div>
                 <div class="col-md-6">
                     <h4 class="mb-3">Does this app require more work for our setters?</h4>
-                    <p class="light-font mb-5">Adding more value and features to your gym that your members would appreciate does require more from your gym staff. With this in mind, our app is designed to make the process as easy and quick as possible with reusable tags and a quick add climb process.</p>
+                    <p class="light-font mb-5">It goes without saying that adding more value and features to your gym that your members would appreciate does require more from your gym staff. With this in mind, our app is designed to make the approach as easy as possible with reusable tags that saves gyms the trouble of reprinting tags and a quick add climb process.</p>
                 </div>
             </div>
         </div>
