--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="google-site-verification" content="qE_2uNIzqw8Qgsx-e5LAJK0m7iD8lP5yYw2TvwjW1-k" />
     <title>βouldersapp™</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
