add sitemap file to root

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="title" content="βouldersapp™"> 
     <meta name="description" content="Rock climbing platform connecting climbers, routesetters, and gyms.">
-    <meta name="keywords" content="climbing, gym, rock, beta, indoor, app, climb">
+    <meta name="keywords" content="climbing, gym, rock, beta, indoor, app, climb, boulders, bouldering">
     <meta name="author" content="David Lac">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
