--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Themify Icons -->
     <link rel="stylesheet" href="./css/themify-icons.css">
     <!-- Owl carousel -->
@@ -343,56 +343,42 @@
         </div>
     </div>
         <p class="mb-2"><small>COPYRIGHT © 2019. ALL RIGHTS RESERVED.<br/>BETABOULDERSAPP.COM</small></p>
-
-<!--         <small>
-            <a href="#" class="m-2">PRESS</a>
-            <a href="#" class="m-2">TERMS</a>
-            <a href="#" class="m-2">PRIVACY</a>
-        </small> -->
     </footer>
 
     <!-- jQuery and Bootstrap -->
-    <script src="./js/jquery-3.2.1.min.js"></script>
-    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <!-- Plugins JS -->
     <script src="./js/owl.carousel.min.js"></script>
     <!-- Custom JS -->
     <script src="./js/script.js"></script>
     <script src="./js/wow.min.js"></script>
-    <script>
-        new WOW().init();
-    </script>
+
 
 <script type="text/javascript">
-  function shuffle(array) {
-  var currentIndex = array.length, temporaryValue, randomIndex;
-
-  // While there remain elements to shuffle...
-  while (0 !== currentIndex) {
-
-    // Pick a remaining element...
-    randomIndex = Math.floor(Math.random() * currentIndex);
-    currentIndex -= 1;
-
-    // And swap it with the current element.
-    temporaryValue = array[currentIndex];
-    array[currentIndex] = array[randomIndex];
-    array[randomIndex] = temporaryValue;
-  }
-
-  return array;
+new WOW().init();
+function shuffle(array) {
+var currentIndex = array.length, temporaryValue, randomIndex;
+// While there remain elements to shuffle...
+while (0 !== currentIndex) {
+// Pick a remaining element...
+randomIndex = Math.floor(Math.random() * currentIndex);
+currentIndex -= 1;
+// And swap it with the current element.
+temporaryValue = array[currentIndex];
+array[currentIndex] = array[randomIndex];
+array[randomIndex] = temporaryValue;
 }
-
+return array;
+}
 var plasticHolds = ["./images/holds/blue.png","./images/holds/green.png","./images/holds/orange.png","./images/holds/pink.png","./images/holds/purple.png","./images/holds/red.png","./images/holds/teal.png","./images/holds/yellow.png"];
 plasticHolds = shuffle(plasticHolds);
-
-var divRow =  $('<div>').addClass("row justify-content-center");
-
-
-plasticHolds.forEach(function(URL){
-  var randomBroken = Math.floor(Math.random()*9);
-  var divCol = $('<div>').addClass("col-1 p-0 m-1");
-  var oneHold = $('<img>').attr('src', URL);
+var divRow = $('<div>').addClass("row justify-content-center");
+    plasticHolds.forEach(function(URL){
+    var randomBroken = Math.floor(Math.random()*9);
+    var divCol = $('<div>').addClass("col-1 p-0 m-1");
+        var oneHold = $('<img>').attr('src', URL);
 
  if (randomBroken==0){ oneHold.addClass("img-fluid spin"); } else { oneHold.addClass("img-fluid grow-md"); };
 
