--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta name="description" content="Rock climbing platform connecting climbers, routesetters, and gyms.">
     <meta name="keywords" content="climbing, gym, rock, beta, indoor, app, climb, boulders, bouldering, rock climbing app, indoor rock climbing app, rock climbing">
     <meta name="author" content="David Lac">
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./beta_icon.ico" type="image/x-icon">
+    <link rel="icon" href="./beta_icon.ico" type="image/x-icon">
 
     <!-- Font -->
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -38,7 +38,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <nav class="navbar navbar-dark navbar-expand-lg">
-                        <a class="navbar-brand" href="index.html"><img src="images/logo.png" class="img-fluid" alt="logo"></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+                        <a class="navbar-brand" href="index.html"><img src="images/logo.png" class="img-fluid" alt="logo" style="max-height: 50px"></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
                         <div class="collapse navbar-collapse" id="navbar">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item"> <a class="nav-link active" href="#home">HOME <span class="sr-only">(current)</span></a> </li>
@@ -283,7 +283,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 text-center text-lg-left">
-                	<div class="text-center mb-3"><img src="./images/beta.png" class="img-fluid" style="max-height: 200px"></div>
+                	<div class="text-center mb-4 mx-auto"><img src="./images/beta.png" class="img-fluid" style="max-height: 200px"></div>
                     <div class="container">
                     <p class="mb-2"> <span class="ti-location-pin mr-2"></span> Los Angeles, CA</p>
                     <div class=" d-block d-sm-inline-block">
@@ -292,7 +292,7 @@
                         </p>
                     </div>
                     <div class="d-block d-sm-inline-block mb-3">
-                        <p class="mb-0">
+                        <p class="mb-3">
                             <span class="ti-headphone-alt mr-2"></span> <a href="tel:6264238985">(626) 423-8985</a>
                         </p>
                     </div>
