--- a/gyms.html
+++ b/gyms.html
@@ -10,8 +10,8 @@
     <meta name="description" content="Rock climbing platform connecting climbers, routesetters, and gyms.">
     <meta name="keywords" content="climbing, gym, rock, beta, indoor, app, climb">
     <meta name="author" content="David Lac">
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./beta_icon.ico" type="image/x-icon">
+    <link rel="icon" href="./beta_icon.ico" type="image/x-icon">
 
     <!-- Font -->
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -391,8 +391,8 @@
     <div class="light-bg py-5" id="contact">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 text-center text-lg-left">
-                    <div class="text-center mb-3"><img src="./images/beta.png" class="img-fluid" style="max-height: 200px"></div>
+                 <div class="col-lg-4 text-center text-lg-left">
+                    <div class="text-center mb-4 mx-auto"><img src="./images/beta.png" class="img-fluid" style="max-height: 200px"></div>
                     <div class="container">
                     <p class="mb-2"> <span class="ti-location-pin mr-2"></span> Los Angeles, CA</p>
                     <div class=" d-block d-sm-inline-block">
@@ -401,7 +401,7 @@
                         </p>
                     </div>
                     <div class="d-block d-sm-inline-block mb-3">
-                        <p class="mb-0">
+                        <p class="mb-3">
                             <span class="ti-headphone-alt mr-2"></span> <a href="tel:6264238985">(626) 423-8985</a>
                         </p>
                     </div>
