--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
             <img src="images/client-logos.png" alt="client logos" class="img-fluid">
         </div>
     </div> -->
-
     <div class="section" id="features">
         <div class="container">
             <div class="row">
@@ -270,7 +269,7 @@
                 </div>
                 <h2>Accessible Anywhere</h2>
                 <p class="tagline">Available for all* major mobile and desktop platforms.</p>
-                <p class="text-primary"><small><i>*Tested and working on all browsers including, Safari, Chrome, Firefox, and Edge. </i></small></p>
+                <p class="text-primary"><small><i>*Tested and working on Chrome, Firefox, and Safari browsers. </i></small></p>
 
                 
             </div>
@@ -346,9 +345,13 @@
     </footer>
 
     <!-- jQuery and Bootstrap -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
     <!-- Plugins JS -->
     <script src="./js/owl.carousel.min.js"></script>
     <!-- Custom JS -->
